add comments to PinningDemo